@@ -3,6 +3,12 @@ Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)
 More information on each of the fixes can be found in the project
 development home at https://github.com/projectestac/agora_nodes
 
+Changes in progress
+---------------------------------------------------------------------------------------
+- Reactor: Fixed bug with right column size (#Trello 1185)
+- Reactor: Fixed bug with menu icons with 2-lines text (#Trello #1184)
+
+
 Changes 16.03.14
 ---------------------------------------------------------------------------------------
 - Reactor: Moved hard coded language strings to po file (Trello #963)
